<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThirtyInSixty</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="door_2">Door 2</string>
    <string name="door_1">Door 1</string>
    <string name="door_3">Door 3</string>
    <string name="pick_door_title">Pick the button that\'s a fragment!</string>
    <string name="time">Time:</string>
    <string name="score">Score:</string>
    <string name="button_6">6</string>
    <string name="button_5">5</string>
    <string name="button_4">4</string>
    <string name="button_3">3</string>
    <string name="button_2">2</string>
    <string name="button_1">1</string>
    <string name="button_0">0</string>
    <string name="target_button">BUTTON</string>
    <string name="title_activity_crossfit_timer">CrossfitTimer</string>
    <string name="timer_label">00:00.00</string>
    <string name="reset_button">reset</string>
    <string name="stopwatch_title">Stopwatch</string>
    <string name="countdown_title">Countdown</string>
    <string name="tabata_title">Tabata</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="start_caps">START</string>
    <string name="emom_title">How many rounds?</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="backspace"><![CDATA[<]]></string>
    <string name="emom_timer_label">00:00</string>
    <string name="stop_caps">STOP</string>
    <string name="tabata_rest_timer">Rest :10</string>
    <string name="tabata_work_timer">Work :20</string>
    <string name="tabata_info">8 Rounds - 4 Mins Total</string>
    <string name="title_activity_shake_it">ShakeIt</string>
    <string name="start_shake_it">Shake it up!</string>
    <string name="title_activity_task_list">TaskList</string>
    <string name="enter_task">Enter task:</string>
    <string name="tasks">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="delete">Delete</string>
    <string name="title_activity_parse_task_list">ParseTaskList</string>
    <string name="title_activity_notify_yourself">NotifyYourself</string>
    <string name="notify_yourself">HI GRACE</string>
    <string name="notify_yourself_text">You just got notified!</string>

</resources>
