<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:gravity="center_vertical"
        >

    <Button android:id="@+id/button_0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_0"
            android:textSize="16sp"
            />

    <Button android:id="@+id/button_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_1"
            android:textSize="16sp"
            />

    <Button android:id="@+id/button_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_2"
            android:textSize="16sp"
            />

    <Button android:id="@+id/button_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_3"
            android:textSize="16sp"
            />

    <Button android:id="@+id/button_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_4"
            android:textSize="16sp"
            />

    <Button android:id="@+id/button_5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_5"
            android:textSize="16sp"
            />

    <Button android:id="@+id/button_6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_6"
            android:textSize="16sp"
            />


</LinearLayout>