<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              >
    <TextView android:id="@+id/pick_door_title"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/pick_door_title"
              android:textSize="22sp"
              />
    <fragment android:id="@+id/door_1_fragment"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:name="com.example.thirtyinsixty.App_0.MainFragment"
            />
    <Button android:id="@+id/door_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/door_2"
            android:textSize="16sp"
            />
    <Button android:id="@+id/door_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/door_3"
            android:textSize="16sp"
            />
</LinearLayout>